--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="row justify-content-center fs-5">
           <div class="col-md-2">
-            <p class="lead fs-6">No WA : 081288173086</p>
+            <p class="lead fs-6 text-dark">No WA : 081288173086</p>
           </div>
           <div class="col-md-2">
             <p class="lead fs-6">Ig : <a href="https://www.instagram.com/amrmhdn_/" class="text-dark">amrmhdn_</a></p>
