--- a/index.html
+++ b/index.html
@@ -138,6 +138,20 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
+                src="img/project/6.png"
+                class="card-img-top"
+                alt="project1"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                Pada tahun 2024 saya magang di PLN Icon Plus, dimana saya membuat User Interface (UI) aplikasi Diamond berbasis website menggunakan framework Vue js dan library tailwind.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img
                 src="img/project/1.png"
                 class="card-img-top"
                 alt="project1"
@@ -226,6 +240,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
+          <div class="col-md-4">
+            <h3>Intership PLN Icon Plus</h3>
+            <p class="lead">Sub Bidang Aplikasi PLN - Korporat 1 | 2024</p>
+            <p>
+              Membuat rancangan User Interface (UI) aplikasi web Dimaond atau aplikasi internal PLN Icon Plus, menggunakan framework Vue js dan Library tailwind.
+            </p>
+          </div>
           <div class="col-md-4">
             <h3>Student Worker</h3>
             <p class="lead">BPDSI | 2023</p>
