--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         class="img-thumbnail"
       />
       <h1 class="display-4">Amar Mahdin</h1>
-      <p class="lead">Mahasiswa | Beasiswa Prestasi PLN</p>
+      <p class="lead">Front End Developer</p>
       <div class="container">
         <div class="row justify-content-center fs-5">
           <div class="col-md-2">
-            <p class="lead fs-6 text-dark">No WA : 081288173086</p>
+            <p class="lead fs-6 text-dark">No WA : 081283173086</p>
           </div>
           <div class="col-md-2">
             <p class="lead fs-6">Ig : <a href="https://www.instagram.com/amrmhdn_/" class="text-dark">amrmhdn_</a></p>
@@ -100,18 +100,18 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
             <p>
-              Halo, saya Muhammad Amar Mahdin biasa di panggil amar. Saya adalah
-              salah satu mahasiswa Institut Teknologi Perusahaan Listrik Negara.
-              Jurusan Teknik Informatika, selama di perkuliahan saya aktif di
-              berbagai kepanitian dan beberapa organisasi.
+              Sebagai seorang fresh graduate di bidang Teknik Informatika
+              saya memiliki ketertarikan yang besar dalam pengembangan website
+              terutama pada bagian frontend development Dengan pemahaman mendalam mengenai pengembangan dan perancangan website, 
+              mendalam mengenai pengembangan dan perancangan website,
             </p>
           </div>
           <div class="col-md-4">
             <p>
-              Sesuai dengan jurusan saya, saya tertarik dengan pemrograman
-              seperti mobile developer, web developer khususnya front end
-              developer dan jaringan komputer. Saya memiliki minat dalam
-              perancangan dan pengembangan web.
+              saya percaya dapat memberikan kontribusi yang berarti dalam proyek apapun, 
+              khususnya yang berkaitan dengan pengembangan web. Saya sangat antusias untuk bergabung 
+              dengan PT ICON+dan siap memberikan yang terbaik sesuai dengan passion dan 
+              kemampuan yang saya miliki.
             </p>
           </div>
         </div>
